--- a/resources/app-templates/leocdp-admin/modules/asset/category-list.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/category-list.html
@@ -12,7 +12,7 @@
 <div class="row ">
     <div class="col-lg-12">
 		<div class="top_page_header" >
-			<h4> Data Asset Management </h4>
+			<h4> Digital Data Asset </h4>
 			<b class="highlight_text"> Select a category to input data </b>
 		</div>
         <div class="table-responsive">
