--- a/resources/app-templates/target-media/product-recommendation.html
+++ b/resources/app-templates/target-media/product-recommendation.html
@@ -30,6 +30,9 @@
 	</div>
 
 	<script>
+		var leoObserverLogDomain = "{{{baseLeoObserverUrl}}}";
+		var leoObserverCdnDomain = "{{{baseStaticUrl}}}";
+		
 		var observerId = "{{customData.observerId}}";
 		var visitorId = "{{customData.visitorId}}";
 		var touchpointUrl = "{{{customData.touchpointUrl}}}";
@@ -37,7 +40,7 @@
 		var nrs = parseInt("{{{customData.max_item_for_profile}}}");
 		var maxResult = parseInt("{{{customData.max_item_for_request}}}");
 		
-		var url = "https://demotrack.leocdp.net/ris/json/products?visid="+visitorId;
+		var url = "https://" + leoObserverLogDomain + "/ris/json/products?visid="+visitorId;
 		var cb = Math.floor(Math.random() * 100000);
 		url += ("&tpurl=" + encodeURIComponent(location.href) ); // touchpointUrl
 		url += ("&obsid=" + observerId );
