--- a/resources/app-templates/target-media/content-recommendation.html
+++ b/resources/app-templates/target-media/content-recommendation.html
@@ -18,7 +18,7 @@
 </head>
 <body style="text-align:center; background-color: transparent!important; max-width: 300px; margin: auto;">
 
-	<h6 style="color: blue">Recommended Contents by LEO CDP</h6>
+	<h6 style="color: blue">Recommended Items by LEO</h6>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-sm-8 col-lg-12">
