new feature: CX for touchpoint analytics

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -29,14 +29,14 @@
         <div class="row">
         	<div class="col-md-4">
             	<div class="panel panel-marketing">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> Primary Marketing Metrics in Total</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> Marketing Metrics in Total</h3> </div>
 				  	<div class="panel-body" id="marketing_metrics_holder" >
 				  	</div>
 				</div>
 			</div>
 			<div class="col-md-4">
             	<div class="panel panel-business">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> Primary Customer Metrics in Total</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> Customer Metrics in Total</h3> </div>
 				  	<div class="panel-body" id="sales_metrics_holder" >
 				  	</div>
 				</div>
@@ -101,7 +101,7 @@
         <!-- holder for Total Customer Statistics and Total Event Statistics -->
         <div class="col-md-4 "> 
         	<div class="chart_box">
-	        	<h4 class="highlight_text text-center" > Summary Data in Total </h4>
+	        	<h4 class="highlight_text text-center" > Summary Statistics in Total </h4>
 	            <div class="summary_metric">
 	                <div class="vcenter" id="profile_total_stats" >
 	 					<!--  Summary: profile, segment, revenue -->
