--- a/resources/app-templates/leocdp-admin/modules/asset/item-feedback-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-feedback-editor.html
@@ -436,7 +436,7 @@
 		var idDialog = "dialogEmbeddedFeedbackForm";
 		var iFrameHeight = feedbackModel.templateType === 0 ? 1000 : 350;
 		// init modal box
-		initEmbeddedFeedbackForm(idDialog, feedbackModel, iFrameHeight);
+		initEmbeddedFeedbackForm("",idDialog, feedbackModel, iFrameHeight);
 		// show it
 		$('#'+idDialog).modal({ backdrop: 'static', keyboard: false });
     }
