--- a/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
@@ -11,7 +11,8 @@
 	</div>
 </div>
   
-<div class="row">
+<div id="event_dashboard_loader" class="loader"></div>  
+<div id="event_dashboard" class="row" style="display: none;">
 
      	<!-- Date filter control -->
      	<div class="col-lg-12 float-right">
@@ -39,9 +40,8 @@
 	        </div>
 	    </div>
      	  
-    	<!--  Time-series -->
-    	<div id="event_dashboard_loader" class="loader"></div>
-      	<div id="event_dashboard" class="col-lg-12" style="display: none;" >
+    	<!--  main UI for event timeseries -->
+      	<div class="col-lg-12"  >
       		<div class="col-lg-9 highlight_box">
       			<div class='text-center' style="margin-bottom: 15px">
 					<h4> <i class="fa fa-line-chart" aria-hidden="true"></i> Event Data Report from 
