--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -32,7 +32,8 @@
 	</div>
 </div>
 
-<div class="row">
+<div id="cx_dashboard_loader" class="loader"></div>
+<div id="cx_dashboard" class="row" style="display: none;">
 
      	<!-- Date filter control -->
      	<div class="col-lg-12 float-right">
@@ -58,9 +59,7 @@
 	        </div>
 	    </div>
      
-     	<div id="cx_dashboard_loader" class="loader"></div>
-     	<div id="cx_dashboard" class="col-lg-12" style="display: none;" >
-	     	
+     	<div class="col-lg-12"  >
 	     	<!--  Tab Navigation Items -->
 		    <ul id="cx_report_tab_buttons" class="nav nav-tabs" data-tab-content="cx_report_tabs" >
 				<li data-report-type="rating" onclick="loadCxRatingReport(true)" class="active" >
