--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -201,7 +201,7 @@
 	window.currentUserProfile = {'displayName':''};
 	
 	function loadUserInfoWidget() {
-	    var urlStr = baseLeoAdminUrl + '/user/get-info';
+	    var urlStr = baseLeoAdminUrl + '/user/get';
 	    LeoAdminApiUtil.callPostAdminApi(urlStr, {}, function (json) {
 	        if (json.httpCode === 0 && json.errorMessage === '') {
 	            if (json.data) {
