--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -121,7 +121,7 @@
 
     var loadDataUserProfile = loadDataUserProfile || function(key) {
     	
-         var urlStr = baseLeoAdminUrl + '/user/get-info';
+         var urlStr = baseLeoAdminUrl + '/user/get';
          LeoAdminApiUtil.callPostAdminApi(urlStr, {
              'key': key || 'newuser'
          }, function (json) {
