update for version 0.9

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -214,7 +214,7 @@
 	                	$("#Connector_Management_Menu").show();
 	                }
 	                if(role >= 3){
-	                	// ROLE_ADMIN and ROLE_SUPER_ADMIN
+	                	// ROLE_DATA_ADMIN and ROLE_SUPER_ADMIN
 	                	$('#nav_system_management').show();
 	                }
 	                if(role === 6) {
