--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -25,7 +25,7 @@
 				</a>
 				<ul class="dropdown-menu">
 					<li>
-						<a href="#calljs-leoCdpRouter('My_Login_Info')"> <i class="fa fa-user"></i> My Login Info </a> 
+						<a href="#calljs-leoCdpRouter('My_Login_Editor')"> <i class="fa fa-user"></i> My Login Info </a> 
 					</li>
 					<li style="display: none;" > <a href="#"> <i class="fa fa-fw fa-envelope"></i> Inbox </a> </li>
 					<li id="user_menu_system_settings" style="display: none;" >
