--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -114,13 +114,13 @@
 					<div class="action-div">
 	                    <label>User Role</label>
 	                    <div class="radio" >
-	                        <label><input type="radio" name="role" value="0" > <b>GUEST</b>: the login account can access only the Unified Analytics Hub  </label>
+	                        <label><input type="radio" name="role" value="0" > <b>REPORT VIEWER</b>: the login account can access Unified Analytics Hub and Journey Data Hub </label>
 	                    </div>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="1" > <b>STANDARD USER</b>: the login account can access the Unified Analytics Hub and authorized data</label>
+	                        <label><input type="radio" name="role" value="1" > <b>STANDARD USER</b>: the login account has permissions of REPORT VIEWER and can view authorized data</label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="2"> <b>DATA OPERATOR</b>: the login account has permissions of STANDARD USER and update authorized data</label>
+	                        <label><input type="radio" name="role" value="2"> <b>DATA OPERATOR</b>: the login account has permissions of STANDARD USER and can update authorized data</label>
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="3"> <b>DATA ADMIN</b>: the login account has permissions of DATA OPERATOR and manage Data Asset and Data Connector</label>
