--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -145,7 +145,7 @@
                     },
                     {
                         "render": function (data, type, row) {
-                        	var label = 'GUEST'
+                        	var label = 'REPORT VIEWER'
                             if (data == "6") {
                             	label = 'SUPER_ADMIN';
                             } else if (data == "3") {
