--- a/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
@@ -94,13 +94,13 @@
 					<div class="action-div">
 	                    <label>User Role</label>
 	                    <div class="radio" >
-	                        <label><input type="radio" name="role" value="0" disabled="disabled" > GUEST: the login account can access only the Unified Analytics Hub  </label>
+	                        <label><input type="radio" name="role" value="0" disabled="disabled" > REPORT VIEWER: the login account can access Unified Analytics Hub and Journey Data Hub </label>
 	                    </div>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="1" disabled="disabled"> STANDARD USER: the login account can access Unified Analytics Hub and view authorized data</label>
+	                        <label><input type="radio" name="role" value="1" disabled="disabled"> STANDARD USER: the login account has permissions of REPORT VIEWER and can view authorized data</label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="2" disabled="disabled"> DATA OPERATOR: the login account has permissions of STANDARD USER and update authorized data</label>
+	                        <label><input type="radio" name="role" value="2" disabled="disabled"> DATA OPERATOR: the login account has permissions of STANDARD USER and can update authorized data</label>
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="3" disabled="disabled"> DATA ADMIN: the login account has permissions of DATA OPERATOR and manage Data Asset and Data Connector </label>
