--- a/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
@@ -59,10 +59,10 @@
 	                <div class="form-group">
 	                    <label>User Role</label>
 	                    <div class="radio" style="display: none;" >
-	                        <label><input type="radio" name="role" value="0" disabled="disabled" > GUEST: the login account can access only the Unified Analytics Hub  </label>
+	                        <label><input type="radio" name="role" value="0" disabled="disabled" > REPORT VIEWER: the login account can access only the Unified Analytics Hub and Journey Data Hub </label>
 	                    </div>
 	                    <div class="radio" style="display: none;" >
-	                        <label><input type="radio" name="role" value="1" disabled="disabled"> STANDARD USER: the login account can access Unified Analytics Hub and view authorized data</label>
+	                        <label><input type="radio" name="role" value="1" disabled="disabled"> STANDARD USER: the login account has permissions of REPORT VIEWER and view authorized data</label>
 	                    </div>
 	                    <div class="radio" style="display: none;" >
 	                        <label><input type="radio" name="role" value="2" disabled="disabled"> DATA OPERATOR: the login account has permissions of STANDARD USER and update authorized data</label>
